contact-footer 600px responsive

--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
         <div></div>
         <div class="about-me-headline">
             <h1>About Me</h1>
-
         </div>
         <div class="about-me">
             <div></div>
@@ -65,15 +64,14 @@
                         doloribus beatae at vero soluta unde error repellendus necessitatibus ipsum iusto natus nemo
                         saepe suscipit ullam iste nostrum!Aspernatur ipsam nisi sequi voluptatum assumenda earum
                         doloremque perferendis id deleniti nesciunt, quasi maiores, neque cum accusantium omnis tenetur
-                        obcaecati tempora voluptatibus magnam, est qui consequuntur eligendi. Eum, laudantium quos?
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem minima facere laborum nostrum saepe quis temporibus distinctio veniam sint consequatur! Placeat porro amet modi veniam, debitis id laudantium impedit accusantium!
+                        obcaecati tempora voluptatibus magnam, est qui consequuntur 
                 </div>
 
             </div>
         </div>
 
 
-    </section>
+    <!-- </section>
     <section class="projects" id="projects">
         <div class="project-1">
             <div class="project-description">
@@ -136,7 +134,7 @@
                 </div>
 
             </div>
-        </div>
+        </div> -->
 
         <!-- <div class="projects project-3">
 
@@ -164,8 +162,6 @@
                     <input type="text" name="name" id="name" placeholder="Your name" required>
                 </div>
             </div>
-
-
             <div class="row">
                 <div class="col span-1-of-3">
                     <label class="heading" for="email">Email</label>
@@ -174,8 +170,6 @@
                     <input type="email" name="email" id="email" placeholder="Your email" required>
                 </div>
             </div>
-
-
             <div class="row">
                 <div class="col span-1-of-3">
                     <label class="heading">What brings you by?</label>
