--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
     </header>
     <section class="about js-about-me" id="about">
-        <div></div>
+        <div class="nothing"></div>
         <div class="about-me-headline">
             <h1>About Me</h1>
         </div>
