--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
 
 
-    <!-- </section>
+    </section>
     <section class="projects" id="projects">
         <div class="project-1">
             <div class="project-description">
@@ -134,7 +134,7 @@
                 </div>
 
             </div>
-        </div> -->
+        </div>
 
         <!-- <div class="projects project-3">
 
