--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
             </div>
             <div></div>
             <div class="icons js-wp-1">
-                <div class="logo">
-                    <img src="/img/icons/new-mongo.png" alt="mongoDB-logo">
+                <div class="logo evenLogo">
+                    <img src="/img/icons/new-mongo.png" id="mongo" alt="mongoDB-logo">
                 </div>
                 <div class="logo" >
                     <img style="background-color:rgb(255, 187, 0); border-radius:50%" src="/img/icons/express.png"
@@ -96,8 +96,8 @@
                 <div class="logo">
                     <img src="/img/icons/react.png" alt="logo">
                 </div>
-                <div class="logo">
-                    <img src="/img/icons/Nodejs.png" alt="logo">
+                <div class="logo evenLogo">
+                    <img src="/img/icons/Nodejs.png" id="node" alt="logo">
                 </div>
 
             </div>
