--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
             </div>
             <div></div>
             <div class="icons js-wp-1">
-                <div class="logo evenLogo">
+                <div class="logo evenLogo bigger">
                     <img src="/img/icons/new-mongo.png" id="mongo" alt="mongoDB-logo">
                 </div>
-                <div class="logo" >
+                <div class="logo bigger" >
                     <img style="background-color:rgb(255, 187, 0); border-radius:50%" src="/img/icons/express.png"
                         alt="logo">
                 </div>
-                <div class="logo">
+                <div class="logo bigger">
                     <img src="/img/icons/react.png" alt="logo">
                 </div>
                 <div class="logo evenLogo">
@@ -119,11 +119,11 @@
                 </div>
                 <div></div>
                 <div class="icons js-wp-2">
-                    <div class="logo2">
+                    <div class="logo2 left">
                         <img  src="/img/icons/django-logo.png"  id="django" alt="logo">
                     </div>
-                    <div class="logo2">
-                        <img  style=" border-radius:50%" src="/img/icons/python-logo.png" id="python"alt="logo">
+                    <div class="logo2 left">
+                        <img  style=" border-radius:50%" src="/img/icons/new-python.png" id="python"alt="logo">
                     </div>
                     <div class="logo2">
                         <img   src="/img/icons/react.png"  id="react" alt="logo"> 
@@ -135,12 +135,6 @@
 
             </div>
         </div>
-
-        <!-- <div class="projects project-3">
-
-        </div>
-        <div class="projects project-4">
-        </div> -->
     </section>
 
     <section class="contact" id="contact">
